--- a/index.html
+++ b/index.html
@@ -1,44 +1,50 @@
-#include<cstdio>
-#include<iostream>
-#include<cstring>
-#include<queue>
-#include<map>
-#include<algorithm>
-using namespace std;
-int main(){
-    long long t;
-    cin>>t;
-    while(t){
-        t--;
-        long long n,x;
-        
-        cin>>n;
-        vector<long long> b(n+5),ans,a(n+5);
-        for(long long i=1;i<=n;i++){
-            cin>>b[i];
-            if(b[i]!=b[i-1]) x=i;
-            a[x]++;
-        }
-        bool flag=0;
-        for(long long i=1;i<=n;i++){
-            if(a[i]){
-                if(a[i]==1){
-                    cout<<-1<<endl;
-                    flag=1;
-                    break;
-                }
-                long long len=ans.size();
-                ans.push_back(ans.size()+a[i]);
-                a[i]--;
-                for(long long j=1;j<=a[i];j++){
-                    ans.push_back(len+j);
-                }
-                a[i]=0;
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.0/codemirror.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.0/codemirror.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.0/mode/clike/clike.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.0/addon/hint/show-hint.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.0/addon/hint/clang-hint.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.0/addon/edit/closetag.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.0/addon/edit/closebrackets.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.0/addon/edit/matchbrackets.min.js"></script>
+</head>
+<body>
+    <h2>C++ Online IDE</h2>
+    <textarea id="editor"></textarea>
+    <button onclick="compileAndRun()">Compile & Run</button>
+    <div id="output"></div>
+
+    <script>
+        var editor = CodeMirror.fromTextArea(document.getElementById("editor"), {
+            lineNumbers: true,
+            mode: "text/x-c++src",
+            autoCloseBrackets: true,
+            autoCloseTags: true,
+            matchBrackets: true,
+            theme: "default",
+            autofocus: true,
+            extraKeys: {
+                "Ctrl-Space": "autocomplete"
             }
+        });
+
+        var Module = {
+            onRuntimeInitialized: function() {
+                console.log("WebAssembly Loaded");
+            }
+        };
+
+        function compileAndRun() {
+            var code = editor.getValue();
+
+            // Compile and run C++ code
+            var result = Module.ccall('runCode', 'string', ['string'], [code]);
+
+            document.getElementById("output").textContent = result;
         }
-        if(!flag){
-            for(long long i=0;i<ans.size();i++) cout<<ans[i]<<' ';
-            cout<<endl;
-        }
-    }
-}
+    </script>
+    <script src="path/to/compiled.wasm"></script>
+</body>
+</html>
